gatekeeper/constraints/disallow-host-network.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts  
metadata:
  name: disallow-host-network
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: ["argoproj.io"]
        kinds: ["Rollout"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - argocd
      - external-secrets
      - monitoring

  parameters:                 
    hostNetwork: false
    min: 0                      
    max: 65535
