gatekeeper/constraints/disallow-root-user.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers  
metadata:
  name: disallow-root-user
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: ["argoproj.io"]
        kinds: ["Rollout"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - argocd
      - external-secrets
      - monitoring
      - cosign-system

  parameters:           
    runAsUser:
      rule: MustRunAsNonRoot
